# TTS.cpp

./: CMakeLists.txt
examples/: CMakeLists.txt  args.cpp  args.h  args_common.cpp  args_common.h
examples/cli/: CMakeLists.txt  cli.cpp  playback.cpp  playback.h  vad.cpp  vad.h  write_file.cpp  write_file.h
examples/perf_battery/: CMakeLists.txt  perf_battery.cpp
examples/phonemize/: CMakeLists.txt  phonemize.cpp
examples/quantize/: CMakeLists.txt  quantize.cpp  quantize_impl.cpp  quantize_impl.h
examples/server/: CMakeLists.txt  server.cpp
include/: args_config.h  common.h  imports.h  phonemizer.h  tokenizer.h  tts.h
src/: CMakeLists.txt  args.cpp  buffers.cpp  buffers.h  tokenizer.cpp  tts.cpp  tts_model.cpp  tts_model.h  util.cpp  util.h
src/decoder/: CMakeLists.txt
src/decoder/dac/: CMakeLists.txt  build.cpp  context.cpp  context.h  hparams.cpp  model.h  tensors.cpp
src/models/: ARCHITECTURE.md  CMakeLists.txt  loaders.cpp  loaders.h  quantizers.cpp  quantizers.h  quantizers_impl.h
src/models/dia/: CMakeLists.txt  build.cpp  context.cpp  context.h  hparams.cpp  kv.cpp  kv.h  loader.cpp  model.h  quantizer.cpp  tensors.cpp  tokenize.cpp
src/models/dia/decoder/: CMakeLists.txt  build.cpp  kv.cpp  model.h  tensors.cpp
src/models/dia/encoder/: build.cpp  kv.cpp  model.h  tensors.cpp
src/models/kokoro/: CMakeLists.txt  build.cpp  context.cpp  context.h  hparams.cpp  loader.cpp  model.h  phonemizer.cpp  quantizer.cpp  tensors.cpp
src/models/kokoro/albert/: CMakeLists.txt  build.cpp  model.h  tensors.cpp
src/models/kokoro/decoder/: CMakeLists.txt  build.cpp  hparams.cpp  model.h  tensors.cpp
src/models/kokoro/duration/: CMakeLists.txt  build.cpp  context.cpp  context.h  model.h  tensors.cpp
src/models/kokoro/duration/ada/: build.cpp  model.h  tensors.cpp
src/models/kokoro/lstm/: build.cpp  model.h  tensors.cpp
src/models/parler/: CMakeLists.txt  build.cpp  context.cpp  context.h  hparams.cpp  kv.cpp  kv.h  loader.cpp  model.h  quantizer.cpp  tensors.cpp  tokenize.cpp
src/models/parler/t5/: CMakeLists.txt  build.cpp  context.cpp  context.h  hparams.cpp  model.h  tensors.cpp
